# rust-math

./: .gitignore  2  Cargo.toml  LICENSE  README.md  out.raw  todo.txt
expr/: Cargo.toml
expr/src/: grammar  lexer.rs  main.rs  parser.rs  parser1.rs
lang/: Cargo.toml  build.rs  spec
lang/src/: grammar.l  grammar.y  grammar_lr.lalrpop  lcombine.rs  lexer.rs  lexer1.rs  lnom.rs  main.rs  parser.rs  ram_grammar.l  ram_grammar.y  ram_grammar_rust.y
math/: Cargo.toml  constants.rs
math/algebra/: c_polar.rs  sym_monom.rs
math/cs/: hanoi.rs
math/exprlang/: grammar  lexer.rs  parser.rs
math/geometry/: triangle.rs
math/linear_algebra/: vector.rs
math/numeric/: dfts.rs  general.rs  integration.rs
math/qoi/: encoder.rs
math/src/: main.rs  utils.rs
mylang/src/: lexer.rs
qoi/src/: main.rs
ram_machine/src/: grammar.l  main.rs  ram_machine.rs
src/: complex.rs  dfts.rs  equations.rs  fts.rs  main.rs  matrix.rs  matrix2.rs  polynom.rs  quaternion.rs  sorting.rs  utils.rs  vector.rs  vector_gen.rs
src/algebra/: c_algebraic.rs  c_polar.rs  complex.rs  mod.rs  poly_c.rs  poly_z.rs  quaternion.rs  sym_poly.rs
src/arithmetic/: big_float.rs  big_int.rs  big_string.rs  big_uint.rs  mod.rs  sign.rs
src/complex_nums/: c_algebraic.rs  c_polar.rs  mod.rs
src/compute/: general.rs  mod.rs  trig.rs
src/cs/: life.rs  mod.rs  sorting.rs
src/expr/: lexer.rs
src/exprlang/: lexer.rs  mod.rs  poly  poly.rs
src/geometry/: mod.rs  polygon.rs
src/linear_algebra/: matrix.rs  matrix_v2.rs  vector.rs
src/long/: big_digit.rs  big_uint.rs
src/misc/: misc.rs  (+1 more)
(+20 files in other folders)
