[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The generated code depends on lalrpop-util.
[dependencies]
combine = "4.6.7"
nom = "7.1.3"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
lrpar = "0.13.6"
cfgrammar = "0.13.6"
lrlex = "0.13.6"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"
lrpar = "0.13.6"
cfgrammar = "0.13.6"
lrlex = "0.13.6"



# lalrpop-util = "*"
#
# # Add a build-time dependency on the lalrpop library:
# [build-dependencies]
# lalrpop = "*"
# If you are supplying your own external lexer you can disable default features so that the
# built-in lexer feature is not included
# lalrpop = { version = "0.20.2", default-features = false }dependencies]
